<resources>
    <string name="app_name">LaiJob</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="user_id">User ID</string>
    <string name="tag">Help you to find best Job around.</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="bt_return">Return</string>
    <string name="bt_center">Center</string>
    <string name="Comment">Comment</string>
    <string name="Submit">Submit</string>
    <string name="Back">Back</string>
    <string name="Rating">Tap to Rate</string>
    <string name="comment_hint">Write Your Comments Here</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="more">More</string>
    <string name="less">Less</string>
    <string name="save">Save </string>
    <string name="saved">Unsave</string>
    <string name="apply">Apply</string>
    <string name="msg_token_fmt">InstanceID Token: %s</string>
    <string name="show_comment_hint">Write your comment and Rating here…</string>
</resources>
