<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_one_star"
            android:layout_width="@dimen/rating_star_dimen"
            android:layout_height="@dimen/rating_star_dimen"
            android:layout_marginEnd="10dp"
            android:background="@drawable/star_hollow" />

        <Button
            android:id="@+id/btn_two_star"
            android:layout_width="@dimen/rating_star_dimen"
            android:layout_height="@dimen/rating_star_dimen"
            android:layout_marginEnd="10dp"
            android:background="@drawable/star_hollow" />

        <Button
            android:id="@+id/btn_three_star"
            android:layout_width="@dimen/rating_star_dimen"
            android:layout_height="@dimen/rating_star_dimen"
            android:layout_marginEnd="10dp"
            android:background="@drawable/star_hollow" />

        <Button
            android:id="@+id/btn_four_star"
            android:layout_width="@dimen/rating_star_dimen"
            android:layout_height="@dimen/rating_star_dimen"
            android:layout_marginEnd="10dp"
            android:background="@drawable/star_hollow" />

        <Button
            android:id="@+id/btn_five_star"
            android:layout_width="@dimen/rating_star_dimen"
            android:layout_height="@dimen/rating_star_dimen"
            android:background="@drawable/star_hollow" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/Rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/comment_body"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="20dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/comment_hint"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="10"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="370dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/Submit"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>