<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/write_comment_cardview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/send_cmt_user_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/user_id"
            android:textSize="14sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toEndOf="@+id/send_cmt_thumbnail"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/send_cmt_thumbnail"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/thumbnail"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/invisible_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/send_cmt_thumbnail"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/et_comment_body"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:maxWidth="320dp"
                android:paddingBottom="8dp"
                android:singleLine="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@+id/textView2"
                app:layout_constraintTop_toTopOf="@+id/textView2">

                <Button
                    android:id="@+id/btn_one_star"
                    android:layout_width="@dimen/rating_star_dimen"
                    android:layout_height="@dimen/rating_star_dimen"
                    android:background="@drawable/star_hollow" />

                <Button
                    android:id="@+id/btn_two_star"
                    android:layout_width="@dimen/rating_star_dimen"
                    android:layout_height="@dimen/rating_star_dimen"

                    android:background="@drawable/star_hollow" />

                <Button
                    android:id="@+id/btn_three_star"
                    android:layout_width="@dimen/rating_star_dimen"
                    android:layout_height="@dimen/rating_star_dimen"
                    android:background="@drawable/star_hollow" />

                <Button
                    android:id="@+id/btn_four_star"
                    android:layout_width="@dimen/rating_star_dimen"
                    android:layout_height="@dimen/rating_star_dimen"
                    android:background="@drawable/star_hollow" />

                <Button
                    android:id="@+id/btn_five_star"
                    android:layout_width="@dimen/rating_star_dimen"
                    android:layout_height="@dimen/rating_star_dimen"
                    android:background="@drawable/star_hollow" />

            </LinearLayout>

            <Button
                android:id="@+id/btn_comment"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/ic_send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView_show_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:paddingBottom="10dp"
            android:text="@string/show_comment_hint"
            app:layout_constraintStart_toEndOf="@+id/send_cmt_thumbnail"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>